--- a/.env
+++ b/.env
@@ -7,7 +7,9 @@ REDIS_PWD=password!
 ##> Rate Limit
 IP_LIMIT_RATE_PER_SECOND=3
 TOKEN_LIMIT_RATE_PER_SECOND=10
-BLOCK_TIME=60
+
+IP_BLOCK_TIME=60# Seconds
+TOKEN_BLOCK_TIME=40# Seconds
 ##< Rate Limit
 
 ##> App
