feat: add windowTime client lock

--- a/.env
+++ b/.env
@@ -5,11 +5,16 @@ REDIS_PWD=password!
 ##< Redis
 
 ##> Rate Limit
-IP_LIMIT_RATE_PER_SECOND=3
-TOKEN_LIMIT_RATE_PER_SECOND=10
+# Rate Limit Type: Second | Minute | Hour | Day
+RATE_LIMIT_BY=Minute
 
-IP_BLOCK_TIME=60# Seconds
-TOKEN_BLOCK_TIME=40# Seconds
+# Number of requests
+IP_LIMIT_RATE=3
+TOKEN_LIMIT_RATE=10
+
+# Time in Second | Minute | Hour | Day according to RATE_LIMIT_BY
+IP_WINDOW_TIME=6
+API_TOKEN_WINDOW_TIME=40
 ##< Rate Limit
 
 ##> App
