--- a/.env
+++ b/.env
@@ -6,15 +6,15 @@ REDIS_PWD=password!
 
 ##> Rate Limit
 # Rate Limit Type: Second | Minute | Hour | Day
-RATE_LIMIT_BY=Minute
+RATE_LIMIT_BY=Second
 
 # Number of requests
-IP_LIMIT_RATE=4
-TOKEN_LIMIT_RATE=5
+IP_LIMIT_RATE=5
+API_TOKEN_LIMIT_RATE=7
 
 # Time in Second | Minute | Hour | Day according to RATE_LIMIT_BY
-IP_WINDOW_TIME=8
-API_TOKEN_WINDOW_TIME=10
+IP_WINDOW_TIME=240
+API_TOKEN_WINDOW_TIME=60
 ##< Rate Limit
 
 ##> App
